2010-03-02  Roland Clobus <rclobus@rclobus.nl>
	* client/ai/greedy.c: Let the AI select only available resources.
	* configure.ac: Upgrade to GTK+ to 2.12 and glib to 2.16.

2010-02-28  Roland Clobus <rclobus@rclobus.nl>
	* meta-server/main.c: Fix some memory leaks.
	* common/Makefile.am: Use variables for sed and echo. (Thanks to Hans
	Fugal who wrote the initial patch)

2010-02-16  Roland Clobus <rclobus@rclobus.nl>
	* kill-game.sh: Added maintenance script for the meta-server.
	* server/player.c: Stop and deregister the tournament timer when the
	time has passed. Cleanup all players that disconnected during the
	registration persiod, to fix the bug that the added computer players
	would leave the game thinking that they are viewers. With the timer
	still running, and even restarting this would cause a fork bomb.

2010-02-10  Roland Clobus <rclobus@rclobus.nl>
	* getVersions.sh: Update for many distributors
	* meta-server/main.c: Fix a resource leak which would cause the meta-
	server to stop sending the names of the games eventually.

2010-01-10  Roland Clobus <rclobus@bigfoot.com>
	* pioneers.nsi.in: Update the Windows installer to include all DLLs.
	* Makefile.am: Invoke indent twice to fix unstable reindents.

2009-12-31  Roland Clobus <rclobus@bigfoot.com>
	* common/network.c: Fix FTBFS for Windows.

2009-11-29  Roland Clobus <rclobus@bigfoot.com>
	* editor/gtk/editor.c: Use the correct size for the icons in the
	context menu.
	* editor/gtk/editor.c, common/gtk/guimap.c, common/gtk/guimap.h:
	The editor can set/unset nosetup nodes.

2009-11-04  Roland Clobus <rclobus@bigfoot.com>
	* configure.ac: Work version is 0.12.4

2009-11-04  Roland Clobus <rclobus@bigfoot.com>
	* Released 0.12.3

2009-11-04  Roland Clobus <rclobus@bigfoot.com>
	* docs/README.release: Mention the .in files
	* client/ai/lobbybot.c: Mention 0.12.3
	* NEWS: Release notes for 0.12.3

2009-10-25  Roland Clobus <rclobus@bigfoot.com>