@@ -43,6 +43,7 @@ AC_SUBST(GTK_REQUIRED_VERSION)
 AM_MAINTAINER_MODE
 
 AC_PROG_LIBTOOL
+AC_SUBST(ECHO)
 
 AC_PROG_CC
 AM_PROG_CC_C_O
